crates/mir/tests/fixtures/errors/noesc_storage_escape.snap
---
source: crates/mir/tests/lowering_errors.rs
expression: err.to_string()
input_file: tests/fixtures/errors/noesc_storage_escape.fe
---
error[10-0001]: cannot store `Esc` in `Storage`
  ┌─ noesc_storage_escape.fe:9:5
  │
9 │     slot = e
  │     ^^^^^^^^ this value cannot be written to `Storage`
  │
  = note: this value contains a borrow handle (`mut`/`ref`)
